correctiong a but where images in the trick show could overflow the container

--- a/assets/css/trick/show.scss
+++ b/assets/css/trick/show.scss
@@ -49,4 +49,8 @@ article.trick-article {
     list-style-type: square;
     list-style-position: inside;
   }
+  img{
+    max-width: 100%;
+    height: auto;
+  }
 }
